# lewis

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DONATE.md  Dockerfile  GITHUB_DESCRIPTION.md  INTERFACE_UPDATES.md  LICENSE  PACKAGE_STRUCTURE.md  PRIVACY_POLICY.md  PRODUCTION_READY_REPORT.md  PROJECT_ANALYSIS_COMPLETE.md  PROJECT_COMPLETION.md  PROJECT_STATUS.md  PYTHON_INSTALL_GUIDE.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  __init__.py  demo.py  developermessage.md  docker-compose.yml  first_time_setup.py  install.sh  install_lewis.sh  install_python311.sh  lewis-cli.py  lewis.py  lewis_ai.desktop.download  lewis_gui.py  main.py  pyproject.toml  requirements-dev.txt  requirements-python311.txt  requirements.txt  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci-cd.yml  ci.yml  security.yml
ai/: __init__.py  ai_engine.py  nlp_processor.py
analytics/: __init__.py  analytics_engine.py
assets/: README.md
backup/: README.md
cache/: README.md
cache/model_cache/: README.md
cache/temp_uploads/: README.md
cache/threat_feeds/: README.md
config/: __init__.py  allowed_commands.list  config.yaml  settings.py  theme_settings.json
core/: __init__.py  ai_engine.py  command_handler.py  decorators.py  extension_base.py  extension_manager.py  lewis_core.py  lewis_runner.py  self_healing.py  self_learning.py  self_modification.py  vapt_engine.py  voice_interface.py
data/: README.md  logs_dataset.json
data/backups/: README.md
data/database/: README.md
data/reports/: README.md
data/uploads/: README.md
database/: setup_db.sql
datasets/: cybersec_data.json  system_logs_sample.csv  threat_patterns.json  training_logs.csv  training_logs2.csv
deployment/: README.md
deployment/cloud/aws/: infrastructure.yaml
deployment/cloud/azure/: infrastructure.json
deployment/cloud/gcp/: infrastructure.yaml
deployment/configs/: apache.conf  nginx.conf
deployment/kubernetes/: autoscaling.yaml  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml  storage.yaml
deployment/monitoring/: docker-compose.yml  grafana.ini  prometheus.yml
deployment/scripts/: production_setup.sh  quick_deploy.sh
detection/: __init__.py  threat_detection.py
examples/: EXTENSION_FIXES.md  EXTENSION_FIXES_SUMMARY.md  FIXES_APPLIED.md  README.md
examples/custom_interface_extension/: MISSING_FILES_CREATED.md  README.md  __init__.py  extension.py  manifest.json
examples/custom_interface_extension/api/: __init__.py  routes.py
examples/custom_interface_extension/config/: default.yaml  interface.yaml
examples/network_security_extension/: README.md  __init__.py  extension.py  manifest.json
execution/: __init__.py  command_executor.py
interfaces/: __init__.py  cli_interface.py  gui_interface.py  web_interface.py
interfaces/templates/: __init__.py  dashboard.html
learning/: __init__.py  knowledge_base.py  self_learning.py
lewis_cyber_law_audit/: lewis_gui_law_audit.py
logs/: README.md  command_log.txt
manual/: 01-installation.md  02-getting-started.md  03-user-guide.md  04-configuration.md  05-api-reference.md  06-customization.md  07-integration.md  08-security.md  09-performance.md  10-troubleshooting.md  11-development.md  12-deployment.md  13-debugging.md  14-extensions.md  15-contributing.md  16-command-reference.md  17-tool-integration.md  18-faq.md  19-glossary.md  20-changelog.md  CROSS_REFERENCE.md  README.md
ml_models/: pattern_learner.py  threat_detection.py
ml_models/trained_models/: lewis_pattern_model.pkl  threat_model.pkl  vectorizer.pkl
models/: README.md
packaging/: README.md  build_deb.sh  build_rpm.sh
packaging/debian/: changelog  control  rules
packaging/rpm/: lewis.spec
packaging/windows/: lewis.wxs
reports/: __init__.py  report_generator.py
research/: page_01_title.txt  page_02_table_of_contents.txt  page_03_introduction.txt  page_04_problem_statement.txt  page_05_research_objectives.txt  page_06_scope_limitations.txt  page_07_current_challenges.txt  page_08_existing_frameworks.txt  page_09_ai_cybersecurity.txt  page_10_nlp_applications.txt  page_11_architecture_overview.txt  page_12_system_components.txt  page_13_design_principles.txt  page_14_technology_stack.txt  page_15_natural_language.txt  page_16_tool_integration.txt  page_17_threat_detection.txt  page_18_report_generation.txt  page_19_extension_architecture.txt  page_20_development_framework.txt  page_21_example_extensions.txt  page_22_community_contributions.txt  page_23_development_process.txt  page_24_testing_strategies.txt  page_25_quality_assurance.txt  page_26_documentation_standards.txt  page_27_deployment_options.txt  page_28_performance_optimization.txt  page_29_scalability_considerations.txt  page_30_high_availability.txt  page_31_security_architecture.txt  page_32_authentication_authorization.txt  page_33_compliance_requirements.txt  page_34_privacy_considerations.txt  page_35_benchmarking_methodology.txt  page_36_performance_metrics.txt  page_37_comparative_analysis.txt  page_38_optimization_results.txt  page_39_enterprise_implementation.txt  page_40_academic_research.txt  (+23 more)
scripts/: README.md  check_version_consistency.py  download_models.py  kali_integration.sh  setup_environment.py  setup_termux.sh
security/: __init__.py  security_manager.py
security_tools/: metasploit_api.py  nikto_integration.py  nmap_wrapper.py
static/: script.js  style.css
storage/: __init__.py  database_manager.py
templates/: README.md  extensions.html  index.html  lewis.service.template
tests/: __init__.py  conftest.py  test_lewis.py
tests/data/: README.md  sample_commands.txt  sample_config.yaml  sample_logs.txt  sample_threats.json
tools/: __init__.py  tool_manager.py
utils/: __init__.py  logger.py
voice/: __init__.py  voice_assistant.py
web-ui/flask-backend/: app.py
web-ui/flask-backend/routes/: api.py  auth.py
web-ui/react-frontend/: package.json
(+25 files in other folders)
